--- a/menu.qsf
+++ b/menu.qsf
@@ -11,7 +11,7 @@
 
 set_global_assignment -name TOP_LEVEL_ENTITY sys_top
 
-set_global_assignment -name LAST_QUARTUS_VERSION "17.0.0 Standard Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
 
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
